--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "2022.2.1"
+    id "idea"
+    id "edu.wpi.first.GradleRIO" version "2022.4.1"
+    id "com.diffplug.spotless" version "6.4.2"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -17,7 +19,7 @@ deploy {
             // or from command line. If not found an exception will be thrown.
             // You can use getTeamOrDefault(team) instead of getTeamNumber if you
             // want to store a team number in this file.
-            team = project.frc.getTeamNumber()
+            team = project.frc.getTeamOrDefault(449)
             debug = project.frc.getDebugOrDefault(false)
 
             artifacts {
@@ -39,15 +41,13 @@ deploy {
 
 def deployArtifact = deploy.targets.roborio.artifacts.frcJava
 
-// Set to true to use debug for JNI.
-wpi.java.debugJni = false
-
-// Set this to true to enable desktop support.
-def includeDesktopSupport = true
-
-// Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
-// Also defines JUnit 4.
 dependencies {
+    testImplementation 'junit:junit:4.13.2'
+
+    compileOnly 'org.jetbrains:annotations:23.0.0'
+
+    implementation 'com.github.Oblarg:Oblog:3.1.2'
+
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
 
@@ -57,20 +57,36 @@ dependencies {
     roborioRelease wpi.java.deps.wpilibJniRelease(wpi.platforms.roborio)
     roborioRelease wpi.java.vendor.jniRelease(wpi.platforms.roborio)
 
-    nativeDebug wpi.java.deps.wpilibJniDebug(wpi.platforms.desktop)
-    nativeDebug wpi.java.vendor.jniDebug(wpi.platforms.desktop)
-    simulationDebug wpi.sim.enableDebug()
+   nativeDebug wpi.java.deps.wpilibJniDebug(wpi.platforms.desktop)
+   nativeDebug wpi.java.vendor.jniDebug(wpi.platforms.desktop)
+   simulationDebug wpi.sim.enableDebug()
 
-    nativeRelease wpi.java.deps.wpilibJniRelease(wpi.platforms.desktop)
-    nativeRelease wpi.java.vendor.jniRelease(wpi.platforms.desktop)
-    simulationRelease wpi.sim.enableRelease()
-
-    testImplementation 'junit:junit:4.12'
+   nativeRelease wpi.java.deps.wpilibJniRelease(wpi.platforms.desktop)
+   nativeRelease wpi.java.vendor.jniRelease(wpi.platforms.desktop)
+   simulationRelease wpi.sim.enableRelease()
 }
 
+
 // Simulation configuration (e.g. environment variables).
+
 wpi.sim.addGui().defaultEnabled = true
 wpi.sim.addDriverstation()
+
+//Sets the websocket client remote host.
+wpi.sim.envVar("HALSIMWS_HOST", "10.0.0.2")
+wpi.sim.addWebsocketsServer().defaultEnabled = true
+wpi.sim.addWebsocketsClient().defaultEnabled = true
+
+wpi.java.debugJni = false
+
+deployArtifact.jarTask = jar
+wpi.java.configureExecutableTasks(jar)
+wpi.java.configureTestTasks(test)
+
+repositories {
+    maven { url 'https://jitpack.io' }
+    mavenCentral()
+}
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
 // in order to make them all available at runtime. Also adding the manifest so WPILib
@@ -81,7 +97,32 @@ jar {
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
-// Configure jar and deploy tasks
-deployArtifact.jarTask = jar
-wpi.java.configureExecutableTasks(jar)
-wpi.java.configureTestTasks(test)
+wrapper {
+    gradleVersion = '7.4.2'
+}
+
+compileJava {
+    options.compilerArgs += ['-parameters', '-Xlint']
+    options.incremental = true
+}
+
+spotless {
+  // optional: limit format enforcement to just the files changed by this feature branch
+  ratchetFrom 'origin/main'
+
+  format 'misc', {
+    // define the files to apply `misc` to
+    target '*.gradle', '*.md', '.gitignore'
+
+    // define the steps to apply to those files
+    trimTrailingWhitespace()
+    indentWithSpaces(2)
+    endWithNewline()
+  }
+  java {
+    // don't need to set target, it is inferred from java
+
+    // apply a specific flavor of google-java-format
+    googleJavaFormat().reflowLongStrings()
+  }
+}
