--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,5 +15,5 @@ jobs:
           java-version: 11
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Run simulateJava task
-        run: ./gradlew simulateJava
+      - name: Run tests
+        run: ./gradlew test
