Use git diff to detect changes

--- a/.github/workflows/spotless.yml
+++ b/.github/workflows/spotless.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "<>"
-        if git status --porcelain
+        if ! git diff --exit-code
         then git commit -am "Format with spotless"
         fi
         git push
