--- a/.github/workflows/spotless.yml
+++ b/.github/workflows/spotless.yml
@@ -25,9 +25,11 @@ jobs:
       run: ./gradlew spotlessApply
     - name: Commit if needed
       run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "<>"
+        git config --local user.email "$(git log --format='%ae' HEAD^!)"
+        git config --local user.name "$(git log --format='%an' HEAD^!)"
+        git remote add github "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git"
+        git pull github ${GITHUB_REF} --ff-only
         if ! git diff --exit-code
         then git commit -am "Format with spotless"
         fi
-        git push
+        git push github HEAD:${GITHUB_REF}
