--- a/.github/workflows/spotless.yml
+++ b/.github/workflows/spotless.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
@@ -25,8 +25,8 @@ jobs:
       run: ./gradlew spotlessApply
     - name: Commit if needed
       run: |
-        git config --local user.email "$(git log --format='%ae' HEAD^!)"
-        git config --local user.name "$(git log --format='%an' HEAD^!)"
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "$GITHUB_ACTOR"
         git remote add github "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git"
         git pull github ${GITHUB_REF} --ff-only
         if ! git diff --exit-code
