--- a/build.gradle
+++ b/build.gradle
@@ -123,3 +123,10 @@ spotless {
     prettier(['prettier-plugin-java': '1.6.1']).configFile("./.prettierrc")
   }
 }
+
+// pre-commit hook to format
+tasks.register('updateGitHooks', Copy) {
+    from './scripts/pre-commit'
+    into './.git/hooks'
+}
+compileJava.dependsOn updateGitHooks
