--- a/build.gradle
+++ b/build.gradle
@@ -128,4 +128,4 @@ tasks.register('updateGitHooks', Copy) {
     from './scripts/pre-commit'
     into './.git/hooks'
 }
-compileJava.dependsOn updateGitHooks
+compileKotlin.dependsOn updateGitHooks
