Turn SparkMaxConfig into a function, add dokka

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id "org.jetbrains.kotlin.jvm" version "1.6.21"
     id "edu.wpi.first.GradleRIO" version "2022.4.1"
     id "org.jlleitschuh.gradle.ktlint" version "10.2.1"
+    id("org.jetbrains.dokka") version "1.6.20"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -49,6 +50,8 @@ dependencies {
 
     implementation 'com.github.Oblarg:Oblog:3.1.2'
 
+    dokkaHtmlPlugin("org.jetbrains.dokka:kotlin-as-java-plugin:1.6.20")
+
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
 
@@ -58,13 +61,13 @@ dependencies {
     roborioRelease wpi.java.deps.wpilibJniRelease(wpi.platforms.roborio)
     roborioRelease wpi.java.vendor.jniRelease(wpi.platforms.roborio)
 
-   nativeDebug wpi.java.deps.wpilibJniDebug(wpi.platforms.desktop)
-   nativeDebug wpi.java.vendor.jniDebug(wpi.platforms.desktop)
-   simulationDebug wpi.sim.enableDebug()
+    nativeDebug wpi.java.deps.wpilibJniDebug(wpi.platforms.desktop)
+    nativeDebug wpi.java.vendor.jniDebug(wpi.platforms.desktop)
+    simulationDebug wpi.sim.enableDebug()
 
-   nativeRelease wpi.java.deps.wpilibJniRelease(wpi.platforms.desktop)
-   nativeRelease wpi.java.vendor.jniRelease(wpi.platforms.desktop)
-   simulationRelease wpi.sim.enableRelease()
+    nativeRelease wpi.java.deps.wpilibJniRelease(wpi.platforms.desktop)
+    nativeRelease wpi.java.vendor.jniRelease(wpi.platforms.desktop)
+    simulationRelease wpi.sim.enableRelease()
 }
 
 
