--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     nativeRelease wpi.java.deps.wpilibJniRelease(wpi.platforms.desktop)
     nativeRelease wpi.java.vendor.jniRelease(wpi.platforms.desktop)
     simulationRelease wpi.sim.enableRelease()
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
 }
 
 // Simulation configuration (e.g. environment variables).
