--- a/.github/workflows/gen-docs.yml
+++ b/.github/workflows/gen-docs.yml
@@ -4,14 +4,33 @@ on:
   push:
     branches:
       - main
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
-  build:
+  # Single deploy job since we're just deploying
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    name: Generate docs
     steps:
-      - name: git-checkout
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
 
       - uses: actions/setup-java@v3
         with:
@@ -21,34 +40,17 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      - name: Overwrite docs branch with main # From https://stackoverflow.com/a/2763118
+      - name: Generate HTML with Dokka
         run: |
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git pull
-          git checkout docs --
-          git switch main
-          git merge --allow-unrelated-histories --strategy=ours docs
-          git switch docs
-          git merge main
-
-      - name: Run dokkaHtml
-        run: |
-          rm -rf docs
           ./gradlew dokkaHtml
-          cp -a build/dokka/html/. docs/
-          git add docs
 
-      - name: Commit files
-        run: |
-          git commit -m "Generate html" -a
-
-      - name: Pull before pushing
-        run: git pull origin docs
-
-      - name: Push changes
-        uses: ad-m/github-push-action@master
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: docs
-          force: true
+          # Upload build HTML
+          path: './build/dokka/html'
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
+
