--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
+import edu.wpi.first.gradlerio.GradleRIOPlugin
+
 plugins {
   id "java"
   id "idea"
   id "org.jetbrains.kotlin.jvm" version "1.6.21"
-  id "edu.wpi.first.GradleRIO" version "2022.4.1"
+  id "edu.wpi.first.GradleRIO" version "2023.1.1-beta-4"
   id "org.jlleitschuh.gradle.ktlint" version "10.2.1"
   id "org.jetbrains.dokka" version "1.6.20"
 }
@@ -48,7 +50,7 @@ dependencies {
 
   compileOnly 'org.jetbrains:annotations:23.0.0'
 
-  implementation 'com.github.Oblarg:Oblog:4.0.9'
+  implementation 'com.github.Oblarg:Oblog:5.1.0'
 
   implementation wpi.java.deps.wpilib()
   implementation wpi.java.vendor.java()
@@ -101,7 +103,7 @@ sourceSets {
 // knows where to look for our Robot Class.
 jar {
   from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
-  manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
+  manifest GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
   duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
