--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
 [{*.kt,*.kts}]
 indent_size=2
 max_line_length=200
-ktlint_no-wildcard-imports = disabled
+ij_kotlin_packages_to_use_import_on_demand = unset
